fix browser shadow overflow from being hidden

--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,8 @@
   .btn {
     min-width: 190px;
   }
+
+  #root {
+    overflow: hidden;
+  }
 }
